--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "angular2-counto": "^1.2.3",
     "angular2-prettyjson": "^2.0.6",
     "core-js": "^2.4.1",
+    "eosjs": "^6.1.6",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
