--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^5.2.9",
     "@ngx-translate/core": "^9.1.1",
     "@ngx-translate/http-loader": "^2.0.1",
+    "@types/googlemaps": "^3.30.9",
     "@types/jquery": "^3.3.1",
     "angular2-counto": "^1.2.5",
     "angular2-prettyjson": "^2.0.6",
