--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
+    "dev": "ng serve",
     "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postinstall": "ng build --aot -prod"
   },
   "private": true,
   "dependencies": {
@@ -29,8 +31,10 @@
     "angular2-prettyjson": "^2.0.6",
     "core-js": "^2.5.4",
     "eosjs": "^13.0.0",
+    "express": "^4.16.3",
     "ngx-webstorage": "^2.0.1",
     "npm": "^5.8.0",
+    "path": "^0.12.7",
     "rxjs": "^5.5.8",
     "zone.js": "^0.8.25"
   },
@@ -55,5 +59,9 @@
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
     "typescript": "~2.5.3"
+  },
+  "engines": {
+    "node": "9.10.1",
+    "npm": "5.6.0"
   }
 }
