--- a/package.json
+++ b/package.json
@@ -33,9 +33,10 @@
     "eosjs": "^13.0.0",
     "express": "^4.16.3",
     "ngx-webstorage": "^2.0.1",
-    "npm": "^5.8.0",
+    "npm": "^5.10.0",
     "path": "^0.12.7",
     "rxjs": "^5.5.8",
+    "throng": "^4.0.0",
     "zone.js": "^0.8.25"
   },
   "devDependencies": {
@@ -62,6 +63,6 @@
   },
   "engines": {
     "node": "9.10.1",
-    "npm": "5.6.0"
+    "npm": "6.1.0"
   }
 }
