--- a/angular.json
+++ b/angular.json
@@ -98,8 +98,7 @@
       }
     },
     "eos-explorer-e2e": {
-      "root": "",
-      "sourceRoot": "e2e",
+      "root": "e2e/",
       "projectType": "application",
       "architect": {
         "e2e": {
