--- a/package.json
+++ b/package.json
@@ -14,21 +14,22 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.0.6",
-    "@angular/common": "^6.0.6",
-    "@angular/compiler": "^6.0.6",
-    "@angular/core": "^6.0.6",
-    "@angular/forms": "^6.0.6",
-    "@angular/http": "^6.0.6",
-    "@angular/platform-browser": "^6.0.6",
-    "@angular/platform-browser-dynamic": "^6.0.6",
-    "@angular/router": "^6.0.6",
+    "@angular/animations": "^6.0.7",
+    "@angular/common": "^6.0.7",
+    "@angular/compiler": "^6.0.7",
+    "@angular/core": "^6.0.7",
+    "@angular/forms": "^6.0.7",
+    "@angular/http": "^6.0.7",
+    "@angular/platform-browser": "^6.0.7",
+    "@angular/platform-browser-dynamic": "^6.0.7",
+    "@angular/router": "^6.0.7",
     "@ngx-translate/core": "^10.0.2",
     "@ngx-translate/http-loader": "^3.0.1",
     "@types/googlemaps": "^3.30.10",
     "@types/jquery": "^3.3.4",
     "angular2-counto": "^1.2.5",
     "angular2-prettyjson": "^2.0.6",
+    "confetti-js": "0.0.11",
     "core-js": "^2.5.7",
     "eosjs": "^15.0.3",
     "express": "^4.16.3",
@@ -41,8 +42,8 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.6.8",
     "@angular/cli": "6.0.8",
-    "@angular/compiler-cli": "^6.0.6",
-    "@angular/language-service": "^6.0.6",
+    "@angular/compiler-cli": "^6.0.7",
+    "@angular/language-service": "^6.0.7",
     "@types/google.analytics": "0.0.36",
     "@types/jasmine": "^2.8.8",
     "@types/jasminewd2": "~2.0.2",
