--- a/angular.json
+++ b/angular.json
@@ -21,7 +21,8 @@
               "src/favicon.ico"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "src/material.css"
             ],
             "scripts": [
               "src/scripts.js",
