--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^1.0.0-beta.3",
     "@angular/animations": "^6.0.7",
     "@angular/cdk": "^6.3.1",
     "@angular/common": "^6.0.7",
