--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "core-js": "^2.5.7",
     "eosjs": "^15.0.3",
     "express": "^4.16.3",
+    "moment": "^2.22.2",
+    "ngx-moment": "^3.1.0",
     "ngx-webstorage": "^2.0.1",
     "normalize.css": "^8.0.0",
     "npm": "^5.10.0",
