--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eosjs": "^16.0.0",
     "express": "^4.16.3",
     "moment": "^2.22.2",
+    "ngx-json-viewer": "^2.3.0",
     "ngx-moment": "^3.1.0",
     "ngx-webstorage": "^2.0.1",
     "normalize.css": "^8.0.0",
