--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "eosjs": "^16.0.0",
     "express": "^4.16.3",
     "moment": "^2.22.2",
-    "ngx-json-viewer": "^2.3.0",
+    "ngx-json-viewer": "^2.3.1",
     "ngx-moment": "^3.1.0",
     "ngx-webstorage": "^2.0.1",
     "normalize.css": "^8.0.0",
@@ -47,14 +47,14 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.7.3",
-    "@angular/cli": "6.1.3",
-    "@angular/compiler-cli": "^6.1.0",
-    "@angular/language-service": "^6.1.0",
+    "@angular/cli": "^6.1.5",
+    "@angular/compiler-cli": "^6.1.4",
+    "@angular/language-service": "^6.1.4",
     "@types/google.analytics": "0.0.36",
     "@types/jasmine": "^2.8.8",
     "@types/jasminewd2": "~2.0.2",
-    "@types/node": "^6.0.114",
-    "codelyzer": "^4.4.2",
+    "@types/node": "^6.0.116",
+    "codelyzer": "^4.4.4",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^2.0.5",
