--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "eos-explorer",
+  "name": "ore-explorer",
   "version": "1.0.0",
   "license": "MIT",
   "scripts": {
@@ -14,6 +14,10 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/build-angular": "~0.7.3",
+    "@angular/cli": "^7.0.6",
+    "@angular/compiler-cli": "^6.1.4",
+    "@angular/language-service": "^6.1.4",
     "@agm/core": "^1.0.0-beta.3",
     "@angular/animations": "^6.1.2",
     "@angular/cdk": "^6.4.3",
@@ -30,6 +34,10 @@
     "@ngx-translate/core": "^10.0.2",
     "@ngx-translate/http-loader": "^3.0.1",
     "@swimlane/ngx-charts": "^9.0.0",
+    "@types/google.analytics": "0.0.36",
+    "@types/jasmine": "^2.8.8",
+    "@types/jasminewd2": "~2.0.2",
+    "@types/node": "^6.0.116",
     "angular2-counto": "^1.2.5",
     "angular2-prettyjson": "^2.0.6",
     "confetti-js": "0.0.11",
@@ -43,17 +51,7 @@
     "normalize.css": "^8.0.0",
     "path": "^0.12.7",
     "rxjs": "^6.2.2",
-    "zone.js": "^0.8.26"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "~0.7.3",
-    "@angular/cli": "^6.1.5",
-    "@angular/compiler-cli": "^6.1.4",
-    "@angular/language-service": "^6.1.4",
-    "@types/google.analytics": "0.0.36",
-    "@types/jasmine": "^2.8.8",
-    "@types/jasminewd2": "~2.0.2",
-    "@types/node": "^6.0.116",
+    "zone.js": "^0.8.26",
     "codelyzer": "^4.4.4",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -67,5 +65,6 @@
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
     "typescript": "2.7.2"
-  }
+  },
+  "devDependencies": {}
 }
