--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
     "ng": "ng",
     "start": "node server.js",
     "dev": "ng serve",
-    "build": "ng build --prod",
+    "build": "node replace.build.js && ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "postinstall": "node patch.js && ng build --aot --prod"
+    "postinstall": "node replace.build.js && node patch.js && ng build --aot --prod"
   },
   "private": true,
   "dependencies": {
@@ -46,7 +46,7 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.7.3",
+    "@angular-devkit/build-angular": "^0.13.8",
     "@angular/cli": "^6.1.5",
     "@angular/compiler-cli": "^6.1.4",
     "@angular/language-service": "^6.1.4",
@@ -64,6 +64,7 @@
     "karma-jasmine": "^1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "^5.4.0",
+    "replace-in-file": "^3.4.4",
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
     "typescript": "2.7.2"
