--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "ngx-json-viewer": "^2.3.1",
     "ngx-moment": "^3.1.0",
     "ngx-webstorage": "^2.0.1",
+    "node-sass": "^4.12.0",
     "normalize.css": "^8.0.0",
     "path": "^0.12.7",
     "rxjs": "^6.2.2",
